--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/kennethlarsen/rember-cli"
 keywords = ["cli", "ember"]
 categories = ["command-line-utilities"]
 build = "build.rs"
-include = ["fixtures/**/*"]
+include = ["src/**/*", "Cargo.toml", "fixtures/**/*"]
 
 [dependencies]
 clap = "2.26.0"
