--- a/new-project/package.json
+++ b/new-project/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "<%= name %>",
+  "name": "new-project",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for <%= name %> goes here",
+  "description": "Small description for new-project goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -22,7 +22,7 @@
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "^3.9.0",
+    "ember-cli": "~<%= emberCLIVersion %>",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.4.1",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -39,8 +39,8 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.10.0-beta.1",
-    "ember-welcome-page": "^4.0.0",
+    "ember-source": "~3.10.0-beta.1<% if (welcome) { %>",
+    "ember-welcome-page": "^4.0.0<% } %>",
     "eslint-plugin-ember": "^6.2.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.4"
